# cutil

./: CMakeLists.txt  LICENSE  README.md
bytebuffer/src/: CMakeLists.txt  bytebuffer.c
bytebuffer/tests/: CMakeLists.txt
cbuffer/include/: cbuffer.h
cbuffer/src/: CMakeLists.txt  cbuffer.c
cbuffer/tests/: CBufferTest.cpp  CMakeLists.txt
include/: bytebuffer.h
src/bytebuffer/: CMakeLists.txt  bytebuffer.c
tests/bytebuffer/: ByteBufferTest.cpp
